# SimpleFS

./: .gitignore  CMakeLists.txt  README.md  disk_emu.c  sfs_api.c  sfs_api.h  sfs_test.c  sfs_util.c  sfs_util.h  test.sh
tests/: test_sfs_api.c  test_utils.c
